correlatorDev/correlator/solution1/solution1.log
==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2017.4
Copyright (C) 1986-2017 Xilinx, Inc. All Rights Reserved.

==============================================================

INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7k160tfbg484-1'
WARNING: [HLS 200-40] Skipped source file 'joeIsAnIdiot.csv'. Source files must have extensions .c, .C, .cc, .cpp, .c++, .cp, or .cxx.
INFO: [HLS 200-10] Analyzing design file 'correlator.cpp' ...
WARNING: [HLS 200-40] In file included from correlator.cpp:1:
correlator.cpp:94:16: error: use of overloaded operator '=' is ambiguous (with operand types 'ap_int<32>' and '__attribute__((bitwidth(32))) int')
  o_data->data = out.V;
  ~~~~~~~~~~~~ ^ ~~~~~
/opt/Xilinx/Vivado/2017.4/common/technology/autopilot/ap_int.h:168:49: note: candidate function
  inline __attribute__((always_inline)) ap_int& operator = (const volatile ap_int<_AP_W>& op2) {
                                                ^
/opt/Xilinx/Vivado/2017.4/common/technology/autopilot/ap_int.h:173:49: note: candidate function
  inline __attribute__((always_inline)) ap_int& operator = (const ap_int<_AP_W>& op2) {
                                                ^
/opt/Xilinx/Vivado/2017.4/common/technology/autopilot/ap_int.h:160:46: note: candidate function
  inline __attribute__((always_inline)) void operator = (const ap_int<_AP_W>& op2) volatile {
                                             ^
/opt/Xilinx/Vivado/2017.4/common/technology/autopilot/ap_int.h:164:46: note: candidate function
  inline __attribute__((always_inline)) void operator = (const volatile ap_int<_AP_W>& op2) volatile {
                                             ^
1 error generated.
ERROR: [HLS 200-70] Compilation errors found:
Pragma processor failed: In file included from correlator.cpp:1:
correlator.cpp:94:16: error: use of overloaded operator '=' is ambiguous (with operand types 'ap_int<32>' and '__attribute__((bitwidth(32))) int')
  o_data->data = out.V;
  ~~~~~~~~~~~~ ^ ~~~~~
/opt/Xilinx/Vivado/2017.4/common/technology/autopilot/ap_int.h:168:49: note: candidate function
  inline __attribute__((always_inline)) ap_int& operator = (const volatile ap_int<_AP_W>& op2) {
                                                ^
/opt/Xilinx/Vivado/2017.4/common/technology/autopilot/ap_int.h:173:49: note: candidate function
  inline __attribute__((always_inline)) ap_int& operator = (const ap_int<_AP_W>& op2) {
                                                ^
/opt/Xilinx/Vivado/2017.4/common/technology/autopilot/ap_int.h:160:46: note: candidate function
  inline __attribute__((always_inline)) void operator = (const ap_int<_AP_W>& op2) volatile {
                                             ^
/opt/Xilinx/Vivado/2017.4/common/technology/autopilot/ap_int.h:164:46: note: candidate function
  inline __attribute__((always_inline)) void operator = (const volatile ap_int<_AP_W>& op2) volatile {
                                             ^
1 error generated.
Failed checking during preprocessing.
    while executing
"source /home/alex/Documents/RFNoCFrameSynchHWAccel/correlatorDev/correlator/solution1/csynth.tcl"
    invoked from within
"hls::main /home/alex/Documents/RFNoCFrameSynchHWAccel/correlatorDev/correlator/solution1/csynth.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel 1 hls::main {*}$args"
    (procedure "hls_proc" line 5)
    invoked from within
"hls_proc $argv"
